<resources>
    <string name="app_name">Homework 1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="signup_fragment_label">Signup and Login</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="professor">I\'m a professor</string>
    <string name="student">I\'m a student</string>
    <string name="submit">Submit</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="username">username</string>
    <string name="password">password</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="university">university</string>
    <string name="student_number">student number</string>

    <string name="class_name">class name</string>
    <string name="search">search</string>
    <string name="create_class">create a class</string>
    <string name="Create_Class">create class</string>
    <string name="add_to_class">add to a class</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">back</string>

    <string name="training_name">training name</string>
    <string name="Create_Training">create training</string>
    <string name="Create_New_Training">create new training</string>
    <string name="login">login</string>
    <string name="UserName">username</string>


</resources>